--- a/src/layout/Layout.module.css
+++ b/src/layout/Layout.module.css
@@ -59,7 +59,7 @@ button {
   }
 
   button {
-    top: 95vh;
+    top: 90vh;
     left: 65vw;
   }
 }
