--- a/src/pages/Comparison.module.css
+++ b/src/pages/Comparison.module.css
@@ -2,8 +2,8 @@
   position: absolute;
   box-sizing: border-box;
 
-  padding-left: 70px;
-  padding-right: 70px;
+  padding-left: 14vw;
+  padding-right: 14vw;
   margin-top: 90px;
   display: flex;
   justify-content: space-between;
